docs/deploy/k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-ui
  namespace: ops
  labels:
    app: alertmanager-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alertmanager-ui
  template:
    metadata:
      labels:
        app: alertmanager-ui
    spec:
      containers:
      - name: nginx
        image: registry.cn-beijing.aliyuncs.com/qqlx/alertmanagerui:main-9f6f636-20260625-100611
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add: ["SYS_NICE"]
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-ui
  namespace: ops
spec:
  type: ClusterIP
  selector:
    app: alertmanager-ui
  ports:
    - name: http-80
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-apiserver
  namespace: ops
  labels:
    app: alertmanager-apiserver
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  replicas: 2
  selector:
    matchLabels:
      app: alertmanager-apiserver
  template:
    metadata:
      labels:
        app: alertmanager-apiserver
    spec:
      containers:
      - name: alertmanager-apiserver
        image: registry.cn-beijing.aliyuncs.com/qqlx/alertmanager:main-ffef71e-20260626-091452
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v1/healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/v1/healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "1"
            memory: 1Gi
        ports:
        - containerPort: 8080
          name: api-port
        - containerPort: 50051
          name: grpc-port
        - containerPort: 9464
          name: metrics
        volumeMounts:
        - name: app-config-volume
          mountPath: /app/config.yaml
          subPath: config.yaml
        - name: tls-certs-volume
          mountPath: /app/certs
          readOnly: true
      volumes:
      - name: app-config-volume
        configMap:
          name: alertmanager-apiserver-config
      - name: tls-certs-volume
        secret:
          secretName: grpc-tls
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-apiserver-svc
  namespace: ops
  labels:
    app: alertmanager-apiserver
spec:
  type: NodePort
  selector:
    app: alertmanager-apiserver
  ports:
    - name: http-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: grpc-50051
      protocol: TCP
      port: 50051
      targetPort: 50051
    - name: metrics
      protocol: TCP
      port: 9464
      targetPort: 9464
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cloud-alertmanager
  namespace: ops
spec:
  gateways:
  - istio-system/ops-https
  - istio-system/ops-http
  hosts:
  - xxx
  http:
  - name: api-routes
    match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: alertmanager-apiserver.ops.svc.cluster.local
        port:
          number: 8080

  - name: ui-routes
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: alertmanager-ui.ops.svc.cluster.local
        port:
          number: 80
